# camroxa

./: .dev-pids  .gitignore  AGENTS.md  MusicGenerator.spec  README.md  SLAI-IMG.json  build_entry.py  clean_home.py  clean_py.py  debug-suno-path-image-retry.md  debug-workflow-upload-lag.md  debug-youtube-auto-upload.md  debug-youtube-upload-issues.md  dev.sh  package-lock.json  start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh  test_import.py
platform_api/: README.md  __init__.py  alembic.ini  config.py  dependencies.py  exceptions.py  main.py  migrate.sh  pyproject.toml  setup-db.sh  wire_dependencies.py
platform_api/clients/: __init__.py  cala_client.py  fal_client.py  key_pool_client_wrapper.py  llm_client.py  slai_client.py  suno_client.py
platform_api/middleware/: __init__.py  audit.py  auth.py  rate_limit.py
platform_api/migrations/: env.py
platform_api/models/: __init__.py  domain.py  enums.py  schemas.py
platform_api/platform_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
platform_api/ports/: __init__.py  auth_port.py  credit_port.py  generation_port.py  key_pool_port.py  key_pool_service_port.py  notification_port.py
platform_api/repositories/: __init__.py  audit_repo.py  batch_repo.py  channel_prompt_repo.py  credit_repo.py  key_pool_repo.py  license_repo.py  profile_repo.py  prompt_repo.py  rate_limit_repo.py  refresh_token_repo.py  settings_repo.py  usage_tracking_repo.py  user_repo.py
platform_api/routers/: __init__.py  admin.py  auth.py  batch.py  callbacks.py  channel_prompts.py  channel_setup.py  credits.py  generation.py  health.py  key_pool.py  licenses.py  plans.py  profiles.py  prompts.py  settings_router.py  stats.py  users.py  ws.py
platform_api/scripts/: add_match_key.py  check_tables.py  create_all_tables.py  create_channel_prompts_table.py  create_email_verifications.py  create_youtube_table.py  seed_admin.py  (+4 more)
python_app/: .env.example  DEVELOPMENT_LOG.md  UI_UX_RECOMMENDATIONS.md  __main__.py  main.py  pyproject.toml  video_templates_local.json
(+643 files in other folders)
