[project]
name = "platform-api"
version = "0.1.0"
description = "Centralized backend service for the music generation ecosystem"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["platform_api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
