[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "music-generator"
version = "1.0.0"
description = "PyQt6-based music generation, video export, and YouTube upload desktop application"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "PyQt6==6.7.0",
    "PyQt6-WebEngine==6.7.0",
    "psutil==7.1.1",
    "moderngl==5.12.0",
    "google-auth==2.53.0",
    "google-auth-oauthlib==1.4.0",
    "google-api-python-client==2.197.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "hypothesis>=6.92", "mypy>=1.8", "ruff>=0.2", "pytest-qt>=4.3"]
test = ["pytest>=7.4", "hypothesis>=6.92", "pytest-qt>=4.3"]

[project.scripts]
music-generator = "python_app.app.bootstrap:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
strict = true
python_version = "3.11"
